@@ -920,6 +920,17 @@ prayer itself, which is the sum of all class levels that qualify \
 for the Empower Scroll prayer.  Beyond that level, the prayer \
 will fail.
 
+PRAYER_EMPOWER_SHIELD=PRAYER_EMPOWERSHIELD
+PRAYER_EMPOWERSHIELD=<ABILITY>\
+Usage    : PRAY "EMPOWER SHIELD" [TARGET SCROLL]\n\r\
+Example  : pray "empower shield" shield\n\r\
+This prayer causes a shield to become permanently empowered and magical. \
+Empowered Shields give a better level of protection for the wearer, and \
+becomming alignment with the caster (good, neutral, or evil).  \
+This prayer is very draining on the caster, however, causing the caster \
+to lose 50 experience points.  The caster must also be at full mana \
+to cast.
+
 PRAYER_ENCHANTRELIC=PRAYER_ENCHANT_RELIC
 PRAYER_ENCHANT_RELIC=<ABILITY>\
 Usage    : PRAY "ENCHANT RELIC" [PRAYERL NAME] [TARGET NAME] \n\r\
@@ -2036,6 +2047,13 @@ Usage    : PRAY "SENSE CHAOS"\n\r\
 Example  : pray "sense chaos"\n\r\
 The caster gains the ability to sense chaotic creatures and items.  They will glow maroon to \
 the caster.
+
+PRAYER_SENSEDEVOTION=PRAYER_SENSE_DEVOTION
+PRAYER_SENSE_DEVOTION=<ABILITY>\
+Usage    : PRAY "SENSE DEVOTION" [TARGET]\n\r\
+Example  : pray "sense devotion" bob\n\r\
+The caster's deity reveals the faith of the target, allowing he or she to know who the target worships. \
+This prayer has reduced effectiveness against higher level targets.
 
 PRAYER_SENSEDISEASE=PRAYER_SENSE_DISEASE
 PRAYER_SENSE_DISEASE=<ABILITY>\
