@@ -18,10 +18,11 @@
  17. Scriptable MPGSET, STAT, etc.. now supports MAX char states (MAXHITS, etc)
  18. Achievements now support expiration/duration.
  19. More new faction change events: all coffeemud message (CMMsg) types.
- 20. New Thief Skills: Mask Faith, False Faith, Graverobbing, Repurpose Text, Whiplash
+ 20. New Thief Skills: Mask Faith, False Faith, Graverobbing, Repurpose Text, Whiplash, Sense Devotion
  21. New Prayers: Deplete Scroll, Attune Scroll, Empower Scroll, Tongues, Fluency
  22. Zappermasks now support +-WEEK, +-DAYOFYEAR, +-YEAR, +-WEEKOFYEAR, and X or Y or Xnd Y syntax
  23. New injury system: Scarring
+ 24. New Prayers: Empower Shield
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
   2. New PLAYERDEATH option: RETAIN -- to allow player mobs to keep their items on death.
